added serialization for evaluation