@@ -3,6 +3,8 @@ import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 plugins {
     kotlin("jvm") version "2.2.0"
     application
+    kotlin("plugin.serialization") version "1.9.0"
+
 }
 
 repositories {
@@ -13,7 +15,6 @@ group = "bachish"
 version = "0.1"
 
 dependencies {
-    testImplementation(kotlin("test"))
     implementation("org.antlr:antlr4-runtime:4.13.2")
     implementation("org.antlr:antlr4:4.13.2")  // Для поддержки TreeViewer
     implementation("me.tongfei:progressbar:0.9.5")
@@ -31,6 +32,16 @@ dependencies {
     implementation("io.github.bonede:tree-sitter-java:0.23.4")
     // https://mvnrepository.com/artifact/org.jgrapht/jgrapht-io
     implementation("org.jgrapht:jgrapht-io:1.5.2")
+    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.3")
+
+
+
+    // https://mvnrepository.com/artifact/com.charleskorn.kaml/kaml-jvm
+    // add yaml support to kotlinx serialization
+    implementation("com.charleskorn.kaml:kaml-jvm:0.85.0")
+    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.3")
+
+    testImplementation(kotlin("test"))
 }
 
 tasks.test {
@@ -66,5 +77,15 @@ tasks.test {
         "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
         "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
         "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
         )
+}
+
+tasks.withType<JavaExec>().configureEach {
+    jvmArgs(
+        "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED"
+    )
 }
